--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -8,16 +8,12 @@
         <!-- Logo icon --><b>
         <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
         <!-- Dark Logo icon -->
-        <img src="assets/images/logo-icon.png" alt="homepage" class="dark-logo"/>
+        <img src="assets/img/logo.png" alt="homepage" class="dark-logo"/>
         <!-- Light Logo icon -->
-        <img src="assets/images/logo-light-icon.png" alt="homepage" class="light-logo"/>
+        <img src="assets/img/logo.png" alt="homepage" class="light-logo" width="76px"/>
       </b>
         <!--End Logo icon -->
-        <!-- Logo text --><span>
-                         <!-- dark Logo text -->
-                         <img src="assets/images/logo-text.png" alt="homepage" class="dark-logo"/>
-        <!-- Light Logo text -->
-                         <img src="assets/images/logo-light-text.png" class="light-logo" alt="homepage"/></span> </a>
+      </a>
     </div>
     <!-- ============================================================== -->
     <!-- End Logo -->
@@ -55,7 +51,7 @@
              aria-haspopup="true" aria-expanded="false"> <i class="mdi mdi-email"></i>
             <div class="notify"><span class="heartbit"></span> <span class="point"></span></div>
           </a>
-          <div class="dropdown-menu mailbox dropdown-menu-right animated fadeIn" aria-labelledby="2">
+          <div class="dropdown-menu mailbox dropdown-menu-right animated bounceInDown" aria-labelledby="2">
             <ul>
               <li>
                 <div class="drop-title">You have 4 new messages</div>
@@ -125,7 +121,7 @@
           <a class="nav-link dropdown-toggle waves-effect waves-dark" href="" data-toggle="dropdown"
              aria-haspopup="true" aria-expanded="false"><img src="assets/images/users/1.jpg" alt="user"
                                                              class="profile-pic"/></a>
-          <div class="dropdown-menu dropdown-menu-right animated fadeIn">
+          <div class="dropdown-menu dropdown-menu-right animated flipInY">
             <ul class="dropdown-user">
               <li>
                 <div class="dw-user-box">
